made email verification using nodemailer and jwt

--- a/views/notFound.ejs
+++ b/views/notFound.ejs
@@ -5,17 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login</title>
+    <title>page not found</title>
 </head>
 
 <body>
-    <% if (messages.success) { %>
-        <section>
-            <p>
-                <%= messages.success %>
-            </p>
-        </section>
-        <% } %>
+    <h1>ooops this page doesn't exist</h1>
 </body>
 
 </html>
