--- a/views/user/user.ejs
+++ b/views/user/user.ejs
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-
+    <% if(user){ %>
+        <h1 class="page-title">Hi, <%= user.first_name %>
+        </h1>
+        <% } %>
 </body>
 
 </html>
