made fixes and very basic styling

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,11 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../public/styles/main.css">
     <title>home</title>
 </head>
 
 <body>
-    <h1>welcome to home page</h1>
+    <% if (messages.success) { %>
+        <section>
+            <p>
+                <%= messages.success %>
+            </p>
+        </section>
+        <% } %>
+            <h1>welcome to home page</h1>
 </body>
 
 </html>
