--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../public/styles/main.css">
     <title>register</title>
 </head>
 
@@ -40,6 +41,9 @@
                 </section>
                 <section>
                     <button type="submit">create account</button>
+                </section>
+                <section>
+                    <p>already have an account? <a href="/login">login</a></p>
                 </section>
     </form>
 </body>
